# BrainStormML

./: .gitignore  README.md  app.py  pyproject.toml  setup.py
artifacts/: model.pkl  proprocessor.pkl
bsml_env/conda-meta/: ca-certificates-2024.7.2-haa95532_0.json  history  openssl-1.1.1w-h2bbff1b_0.json  pip-24.2-py38haa95532_0.json  python-3.8.0-hff0d562_2.json  setuptools-75.1.0-py38haa95532_0.json  sqlite-3.45.3-h2bbff1b_0.json  vc-14.40-h2eaa2aa_1.json  vs2015_runtime-14.40.33807-h98bb1dd_1.json  wheel-0.44.0-py38haa95532_0.json
bsml_env/etc/: aau_token
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebook/: 1. eda.ipynb  2. model_training.ipynb  start.ipynb
notebook/catboost_info/: catboost_training.json  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
notebook/data/: data.csv
src/: exception.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py
templates/: home_beautified.html  index.html
